--- a/css/resume.css
+++ b/css/resume.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
   color: #a1a3a5;
-  background-color: #272B30;
+  background-color: #292d33;
 }
 
 @media (min-width: 992px) {
